Closed Bug 1946657 Opened 1 month ago Closed 24 days ago

Resizing the PiP on youtube videos flickers

Categories

(Core :: Graphics: WebRender, defect)

defect

Tracking

()

VERIFIED FIXED
137 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox-esr128 --- unaffected
firefox135 --- unaffected
firefox136 --- unaffected
firefox137 --- fixed

People

(Reporter: mayankleoboy1, Assigned: sotaro)

References

(Regression)

Details

(Keywords: regression)

Attachments

(3 files)

enable layer compositor
Enable PiP if not enabled
Go to youtube (https://www.youtube.com/watch?v=unSQ6dS9yQw&t=36s)
Put the video in PiP mode
Resize the PiP by dragging on the edge with mouse

AR: the PiP flickers.
ER: Not so

Attached file about:support

This repros on youtube, and a local video file. But does NOT repro on Netflix.
Make what you will of this.

:gw, since you are the author of the regressor, bug 1945683, could you take a look? Also, could you set the severity field?

For more information, please visit BugBot documentation.

Flags: needinfo?(gwatson)

The flickering continues till you get a error in gfx-notes in about:support:

Failure Log
(#0) GP+[GFX1-]: Sw video swapchain present is slow

Once you get this, the flickering stops.
So maybe some interaction between the layer compositor and overlay?

More issues:

  1. if you scroll this page up, the preview/thumbnail of the video appears on top of the search-bar UI, where it is not supposed to.
  2. If you pinch-zoom on the page while the preview/thumbnail is visible, the video flickers.
  3. With gfx.webrender.debug.dcomp-redraw-regions = TRUE, the whole youtube page is redrawn. Compare this with Layer compositor disabled, where only the video area is redrawn (with occasional redraw of some additional area)

Glenn, hopefully you can fix all of these symptoms in this bug itself, rather than posting patches in the other confidential bugs. That way, there will be an open-to-public bug with patches that anyone can see in the future.

Assignee: nobody → gwatson
Flags: needinfo?(gwatson)

Not fixed by bug 1946487

Assignee: gwatson → sotaro.ikeda.g

The videos flickers seemed to happen by recreating video swap chain. During recreating video swap chain, there could be a timing that rendering video does not exist.

We might need to revive workaround of video swap chain that was removed by Bug 1940023. But we need to prevent Bug 1940023 regression.

See Also: → 1940023
See Also: → 1949116

With the try build, the flicker of PiP is fixed. Also seems to fix bug 1949116 and bug 1946655
But there is a lot of stutter https://uditmahajan.com/ : https://share.firefox.dev/42ZrAVn

Pushed by sikeda.birchill@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/1a8a6a295027 Re-add workaround of video overlay's SwapChain Present() r=gfx-reviewers,lsalzman

(In reply to Mayank Bansal from comment #10)

With the try build, the flicker of PiP is fixed. Also seems to fix bug 1949116 and bug 1946655
But there is a lot of stutter https://uditmahajan.com/ : https://share.firefox.dev/42ZrAVn

Thank you for checking! The fix has some workaround for the stutter, but it was not enough. Going to create a new bug for it.

Regressions: 1949341
Status: NEW → RESOLVED
Closed: 24 days ago
Resolution: --- → FIXED
Target Milestone: --- → 137 Branch

This is fixed for me.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: