Bug 1946657 - Re-add workaround of video overlay's SwapChain Present() r=gfx-reviewers,lsalzman

New video SwapChain workaround has a workaround of  Bug 1940023.

Differential Revision: https://phabricator.services.mozilla.com/D238720