gfx/webrender_bindings/DCLayerTree.cpp
@@ -660,8 +660,6 @@ void DCLayerTree::CompositorEndFrame() {
   // Disable video overlay if mCompositionDevice->Commit() with video overlay is
   // too slow. It drops fps.
 
-  const auto maxCommitWaitDurationMs = 20;
-  const auto maxSlowCommitCount = 5;
   const auto commitDurationMs =
       static_cast<uint32_t>((end - start).ToMilliseconds());
 
@@ -669,35 +667,11 @@ void DCLayerTree::CompositorEndFrame() {
                          (uint8_t)mUsedOverlayTypesInFrame, commitDurationMs);
   PROFILER_MARKER_TEXT("CommitWait", GRAPHICS, {}, marker);
 
-  if (mUsedOverlayTypesInFrame != DCompOverlayTypes::NO_OVERLAY &&
-      commitDurationMs > maxCommitWaitDurationMs) {
-    mSlowCommitCount++;
-  } else {
-    mSlowCommitCount = 0;
-  }
-
-  if (mSlowCommitCount <= maxSlowCommitCount) {
-    return;
-  }
-
   for (auto it = mDCSurfaces.begin(); it != mDCSurfaces.end(); it++) {
     auto* surfaceVideo = it->second->AsDCSurfaceVideo();
     if (surfaceVideo) {
-      surfaceVideo->DisableVideoOverlay();
+      surfaceVideo->OnCompositorEndFrame(mCurrentFrame, commitDurationMs);
     }
-  }
-
-  if (mUsedOverlayTypesInFrame & DCompOverlayTypes::SOFTWARE_DECODED_VIDEO) {
-    gfxCriticalNoteOnce << "Sw video swapchain present is slow";
-
-    nsPrintfCString marker("Sw video swapchain present is slow");
-    PROFILER_MARKER_TEXT("DisableOverlay", GRAPHICS, {}, marker);
-  }
-  if (mUsedOverlayTypesInFrame & DCompOverlayTypes::HARDWARE_DECODED_VIDEO) {
-    gfxCriticalNoteOnce << "Hw video swapchain present is slow";
-
-    nsPrintfCString marker("Hw video swapchain present is slow");
-    PROFILER_MARKER_TEXT("DisableOverlay", GRAPHICS, {}, marker);
   }
 }
 
@@ -1701,9 +1675,65 @@ void DCSurfaceVideo::PresentVideo() {
     return;
   }
 
+  const auto device = mDCLayerTree->GetDevice();
   HRESULT hr;
+  if (mFirstPresent) {
+    mFirstPresent = false;
+    UINT flags = DXGI_PRESENT_USE_DURATION;
+    // DirectComposition can display black for a swap chain between the first
+    // and second time it's presented to - maybe the first Present can get lost
+    // somehow and it shows the wrong buffer. In that case copy the buffers so
+    // all have the correct contents, which seems to help. The first Present()
+    // after this needs to have SyncInterval > 0, or else the workaround doesn't
+    // help.
+    for (size_t i = 0; i < mSwapChainBufferCount - 1; ++i) {
+      hr = mVideoSwapChain->Present(0, flags);
+      // Ignore DXGI_STATUS_OCCLUDED since that's not an error but only
+      // indicates that the window is occluded and we can stop rendering.
+      if (FAILED(hr) && hr != DXGI_STATUS_OCCLUDED) {
+        gfxCriticalNoteOnce << "video Present failed during first present: "
+                            << gfx::hexa(hr);
+        return;
+      }
+
+      RefPtr<ID3D11Texture2D> destTexture;
+      mVideoSwapChain->GetBuffer(0, __uuidof(ID3D11Texture2D),
+                                 (void**)getter_AddRefs(destTexture));
+      MOZ_ASSERT(destTexture);
+      RefPtr<ID3D11Texture2D> srcTexture;
+      hr = mVideoSwapChain->GetBuffer(1, __uuidof(ID3D11Texture2D),
+                                      (void**)getter_AddRefs(srcTexture));
+      MOZ_ASSERT(srcTexture);
+      RefPtr<ID3D11DeviceContext> context;
+      device->GetImmediateContext(getter_AddRefs(context));
+      MOZ_ASSERT(context);
+      context->CopyResource(destTexture, srcTexture);
+    }
+
+    // Additionally wait for the GPU to finish executing its commands, or
+    // there still may be a black flicker when presenting expensive content
+    // (e.g. 4k video).
+
+    RefPtr<IDXGIDevice2> dxgiDevice2;
+    device->QueryInterface((IDXGIDevice2**)getter_AddRefs(dxgiDevice2));
+    MOZ_ASSERT(dxgiDevice2);
+
+    HANDLE event = ::CreateEvent(nullptr, false, false, nullptr);
+    hr = dxgiDevice2->EnqueueSetEvent(event);
+    if (SUCCEEDED(hr)) {
+      DebugOnly<DWORD> result = ::WaitForSingleObject(event, INFINITE);
+      MOZ_ASSERT(result == WAIT_OBJECT_0);
+    } else {
+      gfxCriticalNoteOnce << "EnqueueSetEvent failed: " << gfx::hexa(hr);
+    }
+    ::CloseHandle(event);
+  }
+
   UINT flags = DXGI_PRESENT_USE_DURATION;
   UINT interval = 1;
+  if (StaticPrefs::gfx_webrender_dcomp_video_swap_chain_present_interval_0()) {
+    interval = 0;
+  }
 
   auto start = TimeStamp::Now();
   hr = mVideoSwapChain->Present(interval, flags);
@@ -1722,8 +1752,6 @@ void DCSurfaceVideo::PresentVideo() {
     return;
   }
 
-  const auto maxPresentWaitDurationMs = 2;
-  const auto maxSlowPresentCount = 5;
   const auto presentDurationMs =
       static_cast<uint32_t>((end - start).ToMilliseconds());
   const auto overlayType = mRenderTextureHost->IsSoftwareDecodedVideo()
@@ -1734,36 +1762,20 @@ void DCSurfaceVideo::PresentVideo() {
                          presentDurationMs);
   PROFILER_MARKER_TEXT("PresentWait", GRAPHICS, {}, marker);
 
-  if (presentDurationMs > maxPresentWaitDurationMs) {
-    mSlowPresentCount++;
-  } else {
-    mSlowPresentCount = 0;
+  if (mRenderTextureHostUsageInfo) {
+    mRenderTextureHostUsageInfo->OnVideoPresent(mDCLayerTree->GetFrameId(),
+                                                presentDurationMs);
   }
 
-  if (mSlowPresentCount <= maxSlowPresentCount) {
-    return;
-  }
-
-  DisableVideoOverlay();
-
-  if (overlayType == DCompOverlayTypes::SOFTWARE_DECODED_VIDEO) {
-    gfxCriticalNoteOnce << "Sw video swapchain present is slow";
-
-    nsPrintfCString marker("Sw video swapchain present is slow");
-    PROFILER_MARKER_TEXT("DisableOverlay", GRAPHICS, {}, marker);
-  } else {
-    gfxCriticalNoteOnce << "Hw video swapchain present is slow";
-
-    nsPrintfCString marker("Hw video swapchain present is slow");
-    PROFILER_MARKER_TEXT("DisableOverlay", GRAPHICS, {}, marker);
-  }
+  // printf_stderr("DCSurfaceVideo::PresentVideo() 5 presentDurationMs %u\n",
+  // presentDurationMs);
 }
 
-void DCSurfaceVideo::DisableVideoOverlay() {
+void DCSurfaceVideo::OnCompositorEndFrame(int aFrameId, uint32_t aDurationMs) {
   if (!mRenderTextureHostUsageInfo) {
     return;
   }
-  mRenderTextureHostUsageInfo->DisableVideoOverlay();
+  mRenderTextureHostUsageInfo->OnCompositorEndFrame(aFrameId, aDurationMs);
 }
 
 DXGI_FORMAT DCSurfaceVideo::GetSwapChainFormat(bool aUseVpAutoHDR) {
@@ -1778,6 +1790,8 @@ DXGI_FORMAT DCSurfaceVideo::GetSwapChainFormat(bool aUseVpAutoHDR) {
 
 bool DCSurfaceVideo::CreateVideoSwapChain(DXGI_FORMAT aSwapChainFormat) {
   MOZ_ASSERT(mRenderTextureHost);
+
+  mFirstPresent = true;
 
   const auto device = mDCLayerTree->GetDevice();
 
