gfx/webrender_bindings/RenderTextureHost.cpp
@@ -9,6 +9,8 @@
 #include "GLContext.h"
 #include "mozilla/layers/CompositorThread.h"
 #include "mozilla/layers/TextureHost.h"
+#include "mozilla/ProfilerMarkers.h"
+#include "mozilla/webrender/RenderThread.h"
 #include "RenderThread.h"
 
 namespace mozilla {
@@ -23,6 +25,63 @@ void ActivateBindAndTexParameteri(gl::GLContext* aGL, GLenum aActiveTexture,
                       LOCAL_GL_LINEAR);
   aGL->fTexParameteri(aBindTarget, LOCAL_GL_TEXTURE_MAG_FILTER,
                       LOCAL_GL_LINEAR);
+}
+
+void RenderTextureHostUsageInfo::OnVideoPresent(int aFrameId,
+                                                uint32_t aDurationMs) {
+  MOZ_ASSERT(RenderThread::IsInRenderThread());
+
+  const auto maxPresentWaitDurationMs = 2;
+  const auto maxSlowPresentCount = 5;
+
+  mVideoPresentFrameId = aFrameId;
+
+  if (aDurationMs < maxPresentWaitDurationMs) {
+    mSlowPresentCount = 0;
+    return;
+  }
+
+  mSlowPresentCount++;
+
+  if (mSlowPresentCount <= maxSlowPresentCount) {
+    return;
+  }
+
+  DisableVideoOverlay();
+
+  gfxCriticalNoteOnce << "Video swapchain present is slow";
+
+  nsPrintfCString marker("Video swapchain present is slow");
+  PROFILER_MARKER_TEXT("DisableOverlay", GRAPHICS, {}, marker);
+}
+
+void RenderTextureHostUsageInfo::OnCompositorEndFrame(int aFrameId,
+                                                      uint32_t aDurationMs) {
+  MOZ_ASSERT(RenderThread::IsInRenderThread());
+
+  const auto maxCommitWaitDurationMs = 20;
+  const auto maxSlowCommitCount = 5;
+
+  // Check if video was presented in current frame.
+  if (mVideoPresentFrameId != aFrameId) {
+    return;
+  }
+
+  if (aDurationMs < maxCommitWaitDurationMs) {
+    mSlowCommitCount = 0;
+    return;
+  }
+
+  mSlowCommitCount++;
+
+  if (mSlowCommitCount <= maxSlowCommitCount) {
+    return;
+  }
+
+  gfxCriticalNoteOnce << "Video swapchain is slow";
+
+  nsPrintfCString marker("Video swapchain is slow");
+  PROFILER_MARKER_TEXT("DisableOverlay", GRAPHICS, {}, marker);
 }
 
 RenderTextureHost::RenderTextureHost() : mIsFromDRMSource(false) {
